# TIC-80

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: ios.cmake  ucm.cmake
src/: CMakeLists.txt  console.c
tools/bin2txt/: CMakeLists.txt
